# fire-forecasting

./: CMakeLists.txt  README.md  fire-forecasting.cpp  fire-forecasting.h
client/: CMakeLists.txt  calculations.cpp  calculations.h  clientNode.cpp  clientNode.h
server/: Network.h  sensorNode.cpp  serverNode.cpp  serverNode.h
unitTesting/: CMakeLists.txt  unitTesting.cpp
